--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "all-files-in-tree": "^1.1.2",
+    "pretty-file-tree": "^1.0.1",
     "uglify-js": "^3.17.4"
   },
   "scripts": {
